feat(register user): make front comunicate properly with

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="input-field" id="telefone">
               <i class="bx bx-phone"></i>
-              <input name="tel" type="text" placeholder="Telefone" />
+              <input name="cel" type="text" placeholder="Telefone" maxlength="9" />
             </div>
             <div class="input-field" id="cpf">
               <i class="bx bxs-id-card"></i>
