--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,9 @@
       href="imgs/icons8-musical-notes-cute-clipart-32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="index.js" defer></script>
+    <script src="js/user.js" defer></script>
+    <script src="js/auth.js" defer></script>
   </head>
 
   <body>
@@ -21,7 +24,7 @@
       <div class="forms-container">
         <div class="signin-signup">
           
-          <form action="" class="sign-in-form" onsubmit="login()" id="form_login">
+          <form action="" class="sign-in-form" id="form_login">
             <h2 class="title">Login</h2>
             <div class="input-field">
               <i class="bx bx-phone"></i>
@@ -133,8 +136,5 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
-    <script src="js/auth.js"></script>
-
   </body>
 </html>
