add username to screen

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="../css/contratante.css">
 
     <title>Document</title>
+
+    <script src="../js/user.js" defer></script>
 </head>
 
 
@@ -26,7 +28,7 @@
 
             <div class="header_aside">
                 
-                <h3>Username</h3>
+                <h3 id="username"></h3>
                 <p class="profission">Profissão</p>
 
             </div>
