--- a/src/client/index.html
+++ b/src/client/index.html
@@ -69,7 +69,7 @@
                 <label for="diarista_for">Diarista</label>
               </div>
             </div>
-            <div class="input-field" id="username" >
+            <div class="input-field" id="usernameField" >
               <i class="bx bx-user"></i>
               <input name="name" type="text" placeholder="Nome" />
             </div>
