--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -15,6 +15,7 @@
     <title>Document</title>
 
     <script src="../js/user.js" defer></script>
+    <script src="../js/contratante.js" defer></script>
 </head>
 
 
@@ -23,7 +24,7 @@
     <header></header>
     
 
-    <section class="text">
+    <section class="text" id="root">
         <aside>
 
             <div class="header_aside">
@@ -145,7 +146,6 @@
 
         </main>
     </section>
-
 
     <script src="../js/home.js"></script>
 </body>
