first create service feature implementation

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -88,7 +88,7 @@
 
                         <div class="descricao">
                             <p>Descrição de atividades:</p>
-                            <input style="height: 60px; width: 600px;" type="text">
+                            <input name="desc" style="height: 60px; width: 600px;" type="text">
                         </div>
 
                         <p style="display: block;">Endereço:</p>
@@ -99,23 +99,26 @@
                             <div class="especificos">
                             
                                 <p>logradouro:</p>
-                                <input type="text">
+                                <input name="logradouro"type="text">
 
                                 <p>Numero:</p>
-                                <input type="number">
+                                <input name="numero" type="number">
 
                                 <p>complemento</p>
-                                <input type="text">
+                                <input name="complemento" type="text">
 
                             </div>
                             
                             <div class="gerais">
 
                                 <p>bairro</p>
-                                <input type="text">
+                                <input name="bairro" type="text">
 
                                 <p>CEP</p>
-                                <input type="number">
+                                <input name="cep" type="number">
+
+                                <p>UF</p>
+                                <input name="uf" type="text">
 
                             </div>
                         </div>
@@ -124,16 +127,13 @@
 
                     <div class="esquerdo">
                         <p>Metros Quadrados:</p>
-                        <input type="text">
+                        <input name="rooms"type="text">
 
                         <p>Data:</p>
-                        <input type="date">
+                        <input type="date" name="data">
 
                         <p>Horário:</p>
-                        <input type="time">
-
-                        <p>observações:</p>
-                        <input style="height: 100px;" type="text">
+                        <input type="time" name="hora">
 
                     </div>
                 </div>
