add services page

--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -67,22 +67,8 @@
 
         <main>
 
-            <div class="card">
+            <div id="container-servicos">
 
-            </div>
-
-            <div class="card">
-
-            </div>
-
-            <div class="card">
-
-            </div>
-
-
-            <div class="botao">
-                
-                <button id="criaServico">⭯</button>
             </div>
 
             <div class="modalInsercao">
