--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -88,7 +88,7 @@
 
                         <div class="descricao">
                             <p>Descrição de atividades:</p>
-                            <input name="desc" style="height: 60px; width: 600px;" type="text">
+                            <input id="desc" style="height: 60px; width: 600px;" type="text">
                         </div>
 
                         <p style="display: block;">Endereço:</p>
@@ -99,26 +99,29 @@
                             <div class="especificos">
                             
                                 <p>logradouro:</p>
-                                <input name="logradouro"type="text">
+                                <input id="logradouro"type="text">
 
                                 <p>Numero:</p>
-                                <input name="numero" type="number">
+                                <input id="numero" type="number">
 
                                 <p>complemento</p>
-                                <input name="complemento" type="text">
+                                <input id="complemento" type="text">
+
+                                <p>Cidade</p>
+                                <input id="cidade" type="text">
 
                             </div>
                             
                             <div class="gerais">
 
                                 <p>bairro</p>
-                                <input name="bairro" type="text">
+                                <input id="bairro" type="text">
 
                                 <p>CEP</p>
-                                <input name="cep" type="number">
+                                <input id="cep" type="number">
 
                                 <p>UF</p>
-                                <input name="uf" type="text">
+                                <input id="uf" type="text">
 
                             </div>
                         </div>
@@ -127,13 +130,16 @@
 
                     <div class="esquerdo">
                         <p>Metros Quadrados:</p>
-                        <input name="rooms"type="text">
+                        <input id="rooms"type="text">
 
                         <p>Data:</p>
-                        <input type="date" name="data">
+                        <input type="date" id="data">
 
                         <p>Horário:</p>
-                        <input type="time" name="hora">
+                        <input type="time" id="hora">
+
+                        <p>Valor:</p>
+                        <input type="number" id="valor">
 
                     </div>
                 </div>
