fix username display

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -34,7 +34,7 @@
     <section class="text" id="root">
       <aside>
         <div class="header_aside">
-          <h3 id="username"></h3>
+          <h3 id="username-display"></h3>
           <p class="profission">Profissão</p>
         </div>
 
