add logout button

--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="../css/diarista.css" />
 
     <title>LimpaMais</title>
+
+    <script src="../js/user.js" defer></script>
   </head>
 
   <body>
@@ -54,12 +56,12 @@
           <span>Aguardando pagamento:</span> <span>0</span>
         </div>
 
-        <a href="#" style="text-decoration: none">
-          <div class="navSair">
+        <div class="logout">
+          <button class="navSair">
             <i class="bx bx-log-out icon"></i>
             <span class="text nav-text">Sair</span>
-          </div>
-        </a>
+          </button>
+        </div>
       </aside>
 
       <main>
