--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -42,28 +42,28 @@
           <h3 class="servicos">Serviços</h3>
 
           <div class="dados">
-            <span>Solicitações pendentes:</span> <span>0</span>
+            <span>Solicitações pendentes: </span> <span>0</span>
           </div>
 
           <div class="dados">
-            <span>Serviços em processo:</span> <span>0</span>
+            <span>Serviços em processo: </span> <span>0</span>
           </div>
 
           <div class="dados">
-            <span>Serviços concluidos:</span> <span>0</span>
+            <span>Serviços concluidos: </span><span>0</span>
           </div>
         </div>
 
         <div class="pagamentoPendente">
-          <span>Aguardando pagamento:</span> <span>0</span>
+          <span>Aguardando pagamento: </span> <span>0</span>
         </div>
 
-        <a href="#" style="text-decoration: none">
-          <div class="navSair">
+        <div class="logout">
+          <button class="navSair">
             <i class="bx bx-log-out icon"></i>
             <span class="text nav-text">Sair</span>
-          </div>
-        </a>
+          </button>
+        </div>
       </aside>
 
       <main id="main">
