add botao de aceitar serviço

--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -101,7 +101,7 @@
           </div>
 
           <div class="butaoSolicita">
-            <button id="criaSolicitacao">Pegar Serviço</button>
+            <button id="serviceActionBtn">Pegar Serviço</button>
           </div>
         </div>
       </main>
