trata cards de serviço para diferentes status

--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -78,25 +78,25 @@
           <div class="container">
             <div class="direito">
               <div class="descricao">
-                <p id="desc">Descrição de atividades:&nbsp;</p>
+                <p id="desc"></p>
               </div>
               <p style="display: block">Endereço</p>
               <div class="endereco">
                 <div class="especificos">
-                  <p id="lograd">Logradouro:&nbsp;</p>
-                  <p id="numero">Número:&nbsp;</p>
-                  <p id="comp">Complemento:&nbsp;</p>
+                  <p id="lograd"></p>
+                  <p id="numero"></p>
+                  <p id="comp"></p>
                 </div>
                 <div class="gerais">
-                  <p id="bairro">Bairro:&nbsp;</p>
-                  <p id="cep">CEP:&nbsp;</p>
+                  <p id="bairro"></p>
+                  <p id="cep"></p>
                 </div>
               </div>
             </div>
             <div class="esquerdo">
-              <p id="comodos">Cômodos:&nbsp;</p>
-              <p id="dataHora">Data/Hora:&nbsp;</p>
-              <p id="valor">Valor: R$&nbsp;</p>
+              <p id="comodos"></p>
+              <p id="dataHora"></p>
+              <p id="valor"></p>
             </div>
           </div>
 
