handle contratante card click

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -120,7 +120,7 @@
             </div>
 
             <div class="esquerdo">
-              <p>Metros Quadrados:</p>
+              <p>Cômodos:</p>
               <input id="rooms" type="text" />
 
               <p>Data:</p>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="butaoSolicita">
-            <button id="criaSolicitacao">Criar Solicitação</button>
+            <button id="serviceActionBtn">Criar Solicitação</button>
           </div>
         </div>
       </main>
