add set status feature

--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -75,6 +75,9 @@
 
           <button id="fecharX">X</button>
 
+          <button class="aguardar-pagamento-btn">Cobrar Serviço</button>
+          <button class="finalizar-btn">Confirmar pagamento</button>
+
           <div class="container">
             <div class="direito">
               <div class="descricao">
@@ -102,6 +105,7 @@
 
           <div class="butaoSolicita">
             <button id="serviceActionBtn">Pegar Serviço</button>
+
           </div>
         </div>
       </main>
