feat(payment): add diarista pix to select

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -50,7 +50,7 @@
           </div>
 
           <div class="dados">
-            <span>Serviços concluidos: </span><span>0</span>
+            <span>Serviços concluídos: </span><span>0</span>
           </div>
         </div>
 
