improve diarista styling

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -143,9 +143,11 @@
             <span class="hidden" id="copied-text">Copiado!</span>
           </div>
           <div class="butaoSolicita">
-            <button id="serviceActionBtn" onclick="handleCreateService()">
-              Criar Solicitação
-            </button>
+            <button
+              id="serviceActionBtn"
+              onclick="handleCreateService()"
+              data-default-text="Criar Solicitação"
+            ></button>
           </div>
         </div>
       </main>
