--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -104,8 +104,10 @@
           </div>
 
           <div class="butaoSolicita">
-            <button id="serviceActionBtn">Pegar Serviço</button>
-
+            <button
+              id="serviceActionBtn"
+              data-defaultText="Pegar Serviço"
+            ></button>
           </div>
         </div>
       </main>
