--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Login</title>
+    <title>Entrar - Limpa+</title>
     <link
       rel="shortcut icon"
       type="image-x/png"
@@ -18,7 +18,6 @@
     <script src="js/user.js" defer></script>
     <script src="js/auth.js" defer></script>
   </head>
-
   <body>
     <div class="container">
       <div class="forms-container">
@@ -113,21 +112,6 @@
               />
             </div>
             <input type="submit" value="Registre-se" class="btn solid" />
-            <!--<p class="social-text">Registre-se com suas Redes Socias</p>
-          <div class="social-media">
-            <a href="#" class="social-icon">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-google"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div> -->
           </form>
         </div>
       </div>
@@ -136,8 +120,8 @@
           <div class="content">
             <h3>Novo Aqui?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-              labore maxime nobis?
+              Crie sua conta agora e conecte-se com diaristas e clientes. É
+              rápido e fácil.
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Registre-se
@@ -145,14 +129,10 @@
           </div>
           <img src="imgs/clean2.svg" class="image" alt="" />
         </div>
-
         <div class="panel right-panel">
           <div class="content">
             <h3>Já é cadastrado?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-              labore maxime nobis?
-            </p>
+            <p>Se já possui conta no Limpa+, você pode entrar agora mesmo.</p>
             <button class="btn transparent" id="sign-in-btn">Login</button>
           </div>
           <img src="imgs/clean1.svg" class="image" alt="" />
