--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -35,7 +35,7 @@
       <aside>
         <div class="header_aside">
           <h3 id="username-display"></h3>
-          <p class="profission">Profissão</p>
+          <p class="profission">Contratante</p>
         </div>
 
         <div class="miniDashboard">
