--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -34,7 +34,7 @@
       <aside>
         <div class="header_aside">
           <h3 id="username-display"></h3>
-          <p class="profission">Profissão</p>
+          <p class="profission">Diarista</p>
         </div>
 
         <div class="miniDashboard">
@@ -75,9 +75,6 @@
 
           <button id="fecharX">X</button>
 
-          <button class="aguardar-pagamento-btn">Cobrar Serviço</button>
-          <button class="finalizar-btn">Confirmar pagamento</button>
-
           <div class="container">
             <div class="direito">
               <div class="descricao">
@@ -108,6 +105,8 @@
               id="serviceActionBtn"
               data-defaultText="Pegar Serviço"
             ></button>
+            <button class="aguardar-pagamento-btn">Cobrar Serviço</button>
+            <button class="finalizar-btn">Confirmar pagamento</button>
           </div>
         </div>
       </main>
