--- a/src/client/pages/diarista.html
+++ b/src/client/pages/diarista.html
@@ -69,9 +69,7 @@
         <div id="container-servicos"></div>
 
         <div class="modalInsercao">
-          <h3 class="tituloModal">
-            Preencha as informações de Solicitação de seviço
-          </h3>
+          <h3 class="tituloModal">Detalhes do serviço</h3>
 
           <button id="fecharX">X</button>
 
