add diarista rating

--- a/src/client/pages/contratante.html
+++ b/src/client/pages/contratante.html
@@ -148,6 +148,18 @@
               onclick="handleCreateService()"
               data-default-text="Criar Solicitação"
             ></button>
+            <div id="rating-container" class="hidden">
+              <label for="rating-select">Avaliação da(o) Diarista:</label>
+              <select id="rating-select" onchange="handleRatingChange()">
+                <option value="" disabled selected>0 - 5</option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
           </div>
         </div>
       </main>
